<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

  <TextView
        android:id="@+id/resolution"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:text="@string/resolution"
        />   
    
 <Spinner
    android:id="@+id/resolution_spinner"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" 
    
    />
 
   <TextView
        android:id="@+id/compress"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:text="Compression"
        />  
 
    <Spinner
        android:id="@+id/compressSpin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawSelectorOnTop="true" />
 
   <TextView
        android:id="@+id/fps"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:text="@string/fpslimit"
        />  
 
    <Spinner
        android:id="@+id/fps_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawSelectorOnTop="true" />
    
    <TextView
        android:id="@+id/orientation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/orientation" />

     <Spinner android:id="@+id/orientation_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true"/>

     <TextView
        android:id="@+id/port"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/port" />
     
     <EditText
         android:id="@+id/portsel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="7"
         android:inputType="numberDecimal"
         android:digits="0123456789"
         android:maxLength="6"
          >

     </EditText>

     <TextView
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/password" />
          
     <EditText
         android:id="@+id/pass"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="7"
         android:inputType="textPassword" />

     <Button
         android:id="@+id/web_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/start" />

</LinearLayout>
